--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async-helpers": "^0.3.17",
     "axios": "^0.19.0",
     "express": "^4.17.1",
     "hbs": "^4.0.6",
