--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "trabajo1",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "async-helpers": "^0.3.17",
-    "axios": "^0.19.0",
-    "express": "^4.17.1",
-    "hbs": "^4.0.6",
-    "nodemon": "^2.0.2"
-  }
+    "name": "trabajo1",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js",
+        "nodemon": "nodemon server.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "async-helpers": "^0.3.17",
+        "axios": "^0.19.0",
+        "express": "^4.17.1",
+        "hbs": "^4.0.6",
+        "nodemon": "^2.0.2"
+    }
 }
